# internal/handler/facet/update_facet.go
@@ -2,40 +2,43 @@ package facet
 
 import (
 	"fmt"
-	"net/http"
-
 	dto "hs-backend/internal/dto/facet"
 	"hs-backend/internal/handler"
-	"hs-backend/internal/model"
 	"hs-backend/internal/repository"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
 
-type CreateFacetHandler struct {
+type UpdateFacetHandler struct {
 	Deps *handler.HandlerDeps
 }
 
-func NewCreateFacetHandler(deps *handler.HandlerDeps) *CreateFacetHandler {
-	return &CreateFacetHandler{deps}
+func NewUpdateFacetHandler(deps *handler.HandlerDeps) *UpdateFacetHandler {
+	return &UpdateFacetHandler{deps}
 }
 
-// CreateFacetHandler godoc
-// @Summary Create facet
-// @Description Creates a new facet
+// UpdateFacetHandler godoc
+// @Summary Update facet
+// @Description Updates a facet
 // @Tags Facets
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param facet body dto.CreateFacetInput true "Facet"
-// @Success 200 {object} dto.CreateFacetResponse
+// @Param facetId path uint8 true "Facet ID"
+// @Param facet body dto.UpdateFacetInput true "Facet"
+// @Success 200 {object} dto.UpdateFacetResponse
 // @Failure 400 {object} error.ErrorResponse
 // @Failure 404 {object} error.ErrorResponse
 // @Failure 500 {object} error.ErrorResponse
-// @Router /api/facets [post]
-func (h *CreateFacetHandler) Handle(c *gin.Context) {
-	var input dto.CreateFacetInput
+// @Router /api/facets/{facetId} [patch]
+func (h *UpdateFacetHandler) Handle(c *gin.Context) {
+	var input dto.UpdateFacetInput
+
+	if err := c.ShouldBindUri(&input); err != nil {
+		handler.BadRequest(c, err.Error())
+		return
+	}
 
 	if err := c.ShouldBind(&input); err != nil {
 		handler.BadRequest(c, err.Error())
@@ -68,21 +71,32 @@ func (h *CreateFacetHandler) Handle(c *gin.Context) {
 		}
 	}
 
-	repo := repository.NewFacetRepository(h.Deps.DB)
+	facetRepo := repository.NewFacetRepository(h.Deps.DB)
 
-	facet := model.Facet{
-		Color:         input.Color,
-		PublicLabel:   input.PublicLabel,
-		PrivateLabel:  input.PrivateLabel,
-		Configuration: input.Configuration,
-		UserId:        userId,
-	}
-
-	err = repo.CreateOne(&facet)
+	facet, err := facetRepo.FindOneByIDAndUserID(input.FacetID, userId)
 	if err != nil {
-		handler.InternalError(c, "Failed to create facet: "+err.Error())
+		handler.NotFound(c, "Facet not found")
 		return
 	}
 
-	c.JSON(http.StatusOK, dto.ToCreateFacetResponse(facet, userCommunicationServices))
+	if input.Color != nil {
+		facet.Color = *input.Color
+	}
+	if input.PublicLabel != nil {
+		facet.PublicLabel = *input.PublicLabel
+	}
+	if input.PrivateLabel != nil {
+		facet.PrivateLabel = *input.PrivateLabel
+	}
+	if input.Configuration != nil {
+		facet.Configuration = *input.Configuration
+	}
+
+	err = facetRepo.UpdateOne(facet)
+	if err != nil {
+		handler.InternalError(c, "Failed to update facet: "+err.Error())
+		return
+	}
+
+	handler.OK(c, dto.ToUpdateFacetResponse(*facet, userCommunicationServices))
 }
